<resources>
    <string name="app_name">Goal Net Puzzle</string>
    <string name="time_title">Time: </string>
    <string name="move_title">Move: 0</string>
    <string name="Move">Move: </string>
    <string name="move_title_format">%s%d</string>
    <string name="move_format">Move: %d</string>
    <string name="time">00:00:00</string>
    <string name="move">0</string>
    <string name="backButton">backButton</string>
    <string name="infoButton">infoButton</string>
    <string name="refreshButton">refreshButton</string>
    <string name="exitButton">exitButton</string>
    <string name="startMessage">Welcome to the game! Click to start!</string>
    <string name="startButton">Start</string>
    <string name="titleVictory">Victory!</string>
    <string name="victoryMessage">My Congratulations! You completed the puzzle!</string>
    <string name="restartButton">Restart</string>
    <string name="infoMessage"><br>The puzzle is a set of 15 bones with fragments of a picture.</br>
        <br>It is necessary to collect the complete picture by moving them,</br>
        <br>preferably in as few moves as possible.</br>
        <br>Good luck!</br></string>
    <string name="okButton">Go</string>
    <string name="toggleButton">toggleButton</string>
    <string name="nameUser">USERNAME</string>
    <string name="preview">previewImage</string>

    <string name="facebook_app_id">957367418700597</string>
    <string name="fb_login_protocol_scheme">fb957367418700597</string>
    <string name="facebook_client_token">baa45074049b2505f915e5d2e1a1c0ea</string>
</resources>