<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scene_screen"
    tools:context=".ui.main.SceneActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100"
        android:layout_gravity="top"
        android:layout_margin="@dimen/dp5"
        android:background="@drawable/rectangle_menu"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/leftPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:fontFamily="@font/montserrat_semibold_italic"
                android:text="@string/time_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/move_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:fontFamily="@font/montserrat_semibold_italic"
                android:text="@string/move_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/controlPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp5"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exitButton"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp5"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/exitButton"
                android:textColor="@color/black"
                app:icon="@drawable/buttn_exit"
                app:iconGravity="start"
                app:iconSize="20dp"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finishedButton"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp5"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/backButton"
                android:textColor="@color/black"
                app:icon="@drawable/ic_baseline_assignment_turned_in_24"
                app:iconGravity="start"
                app:iconSize="25dp"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refreshButton"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp5"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/infoButton"
                android:textColor="@color/black"
                app:icon="@drawable/buttn_refresh"
                app:iconGravity="start"
                app:iconSize="20dp"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/infoButton"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/refreshButton"
                android:textColor="@color/black"
                app:icon="@drawable/buttn_info"
                app:iconGravity="start"
                app:iconSize="20dp"
                app:iconTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sceneGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/section_background"
        android:orientation="vertical"
        android:padding="@dimen/dp15"
        android:scaleType="centerCrop"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>