<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlPart"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exitButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/dp5"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/exitButton"
            android:textColor="@color/black"
            app:icon="@drawable/buttn_exit"
            app:iconGravity="start"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishedButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/dp5"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/backButton"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_assignment_turned_in_24"
            app:iconGravity="start"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/exitButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/dp5"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/refreshButton"
            android:textColor="@color/black"
            app:icon="@drawable/buttn_refresh"
            app:iconGravity="start"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/finishedButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/infoButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginEnd="@dimen/dp5"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/infoButton"
            android:textColor="@color/black"
            app:icon="@drawable/buttn_info"
            app:iconGravity="start"
            app:iconSize="@dimen/button_icon_size"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/refreshButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>