<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_panel_menu"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_Button"
            android:layout_width="@dimen/button_menu_size"
            android:layout_height="@dimen/button_menu_size"
            android:layout_marginStart="@dimen/dp5"
            android:background="@color/background_transparent"
            android:contentDescription="@string/exitButton"
            app:icon="@drawable/but_exit"
            app:iconGravity="start"
            app:iconSize="@dimen/button_menu_icon_size"
            app:iconTint="@color/Triadic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/info_Button"
            android:layout_width="@dimen/button_menu_size"
            android:layout_height="@dimen/button_menu_size"
            android:layout_marginStart="@dimen/dp5"
            android:background="@color/background_transparent"
            android:contentDescription="@string/infoButton"
            app:icon="@drawable/but_info"
            app:iconGravity="start"
            app:iconSize="@dimen/button_menu_icon_size"
            app:iconTint="@color/Triadic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/exit_Button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_Button"
            android:layout_width="@dimen/button_menu_size"
            android:layout_height="@dimen/button_menu_size"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/background_transparent"
            android:contentDescription="@string/toggleButton"
            app:icon="@drawable/but_sound_on"
            app:iconGravity="start"
            app:iconSize="@dimen/button_menu_icon_size"
            app:iconTint="@color/Triadic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/info_Button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>